WHITE-PAPER/reviewers/packages/v3/arxiv/PACKAGE_MANIFEST.md
# Review Package: ARXIV

**Generated:** 2025-12-26 02:07:57
**Target Venue:** cs.AI Preprint
**Total Size:** 2.7 MB
**Total Files:** 26

---

## Description

arXiv preprint package (25-35 pages, full methodology)

---

## Reading Order

Start with these files in order:

1. `submissions/arxiv/README.md`
2. `submissions/blueprints/ARXIV_BLUEPRINT.md`
3. `theory/MINIMUM_PUBLISHABLE_CLAIMS.md`
4. `theory/THEORY_SECTION.md`
5. `guides/summary_statistics.md`
6. `references/references.md`

---

## Contents

| Category | Files | Size |
|----------|-------|------|
| submissions/ | 4 files | 2.5 MB |
| blueprints/ | 1 files | 10.0 KB |
| theory/ | 4 files | 59.0 KB |
| guides/ | 4 files | 40.0 KB |
| references/ | 2 files | 21.3 KB |
| figures/ | 7 files | 70.7 KB |
| planning/ | 4 files | 39.4 KB |

**Total:** 26 files, 2.7 MB

---

## File Listing

### submissions/

- `submissions\arxiv\LLM_The_Nyquist_Consciousness_Framework.md` (15.8 KB)
- `submissions\arxiv\NYQUIST_ARXIV_PAPER_FINAL.html` (2.4 MB)
- `submissions\arxiv\NYQUIST_ARXIV_PAPER_FINAL.md` (36.8 KB)
- `submissions\arxiv\README.md` (16.6 KB)

### blueprints/

- `submissions\blueprints\ARXIV_BLUEPRINT.md` (10.0 KB)

### theory/

- `theory\B-CRUMBS.md` (16.9 KB)
- `theory\HYPOTHESES_AND_RESULTS.md` (19.3 KB)
- `theory\MINIMUM_PUBLISHABLE_CLAIMS.md` (10.1 KB)
- `theory\THEORY_SECTION.md` (12.7 KB)

### guides/

- `guides\MANIFEST.md` (7.7 KB)
- `guides\REPRODUCIBILITY_README.md` (10.2 KB)
- `guides\summary_statistics.md` (11.5 KB)
- `guides\UNIFIED_STATISTICS_REFERENCE.md` (10.6 KB)

### references/

- `references\references.bib` (14.4 KB)
- `references\references.md` (6.9 KB)

### figures/

- `figures\ascii\ascii_compression.md` (11.7 KB)
- `figures\ascii\ascii_evidence_chain.md` (5.9 KB)
- `figures\ascii\ascii_framework.md` (9.7 KB)
- `figures\ascii\ascii_triple_blind.md` (15.4 KB)
- `figures\ascii\ascii_vortex.md` (8.1 KB)
- `figures\ascii\ascii_workshop_abstract.md` (10.0 KB)
- `figures\ascii\ascii_workshop_contributions.md` (10.0 KB)

### planning/

- `planning\METHODOLOGY_DOMAINS.md` (1.9 KB)
- `planning\NOVAS_OVERCLAIMING_PREVENTION.md` (3.6 KB)
- `planning\OPUS_REVIEW_BRIEF.md` (27.5 KB)
- `planning\PUBLICATION_PIPELINE_MASTER.md` (6.3 KB)

---

## What's NOT Included

- PDF files including 14MB arxiv PDF (use `--include-pdf` to add)
- Other publication path content
- Large binary files

---

## Review Instructions

Please review this package for:

1. **Accuracy of claims** - Are statements supported by evidence?
2. **Clarity of presentation** - Is the writing clear and accessible?
3. **Completeness of evidence** - Are key findings documented?
4. **Suggested improvements** - What would strengthen the paper?

Return feedback to: `WHITE-PAPER/reviewers/from_reviewers/{reviewer}/`

---

*Package extracted from WHITE-PAPER/ for cs.AI Preprint submission review.*